--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,16 +7,16 @@
 
 @import url('./reset.css');
 
-@import url('./header.css');
-@import url(./hero.css);
-@import url(./advantages.css);
-@import url(./components.css);
+/* @import url('./header.css'); */
+/* @import url(./hero.css); */
+/* @import url(./advantages.css); */
+/* @import url(./components.css); */
 @import url(./how-made.css);
-@import url(./products.css);
-@import url(./sellers.css);
-@import url(./reviews.css);
-@import url(./subscribe.css);
-@import url(./footer.css);
+/* @import url(./products.css); */
+/* @import url(./sellers.css); */
+/* @import url(./reviews.css); */
+/* @import url(./subscribe.css); */
+/* @import url(./footer.css); */
 
 :root {
   /* Color */
@@ -82,11 +82,7 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
-  color: ;
-  background-color: ;
 }
 
 .section {
-  padding-top: ;
-  padding-bottom: ;
 }
