--- a/src/partials/how-made.html
+++ b/src/partials/how-made.html
@@ -10,23 +10,21 @@
     <div class="how-made-wrap">
       <div class="how-made-img-wrap js-menu-container" id="mobile-menu">
         <picture class="how-made-img">
-          <!-- Desctop screen -->
-          <source media="(min-width: 1200px)"
-            srcset="/img/how-made/made-desk.webp 1x, /img/how-made/made-desk@2x.webp 2x" type="image/webp"
-            loading="lazy">
-          <source media="(min-width: 1200px)" srcset="/img/how-made/made-desk.jpg 1x, /img/how-made/made-desk@2x.jpg 2x"
-            type="image/jpg" loading="lazy">
-          <!-- Tablet screen -->
-          <source media="(min-width: 768px)" srcset="/img/how-made/made-tab.webp 1x, /img/how-made/made-tab@2x.webp 2x"
-            type="image/webp" loading="lazy">
-          <source media="(min-width: 768px)" srcset="/img/how-made/made-tab.jpg 1x, /img/how-made/made-tab@2x.jpg 2x"
-            type="image/jpg" loading="lazy">
-          <!-- Mobile screen -->
-          <source media="(max-width: 767.9px)"
-            srcset="/img/how-made/made-mob.webp 1x, /img/how-made/made-mob@2x.webp 2x" type="image/webp" loading="lazy">
-          <source media="(max-width: 767.9px)" srcset="/img/how-made/made-mob.jpg 1x, /img/how-made/made-mob@2x.jpg 2x"
-            type="image/jpg" loading="lazy">
-          <img src="/img/how-made/made-mob.jpg" alt="How to make chocolate" loading="lazy">
+          <source media="(min-width: 1200px)" srcset="/img/made/made-desk.jpg 1x, /img/made/made-desk@2x.jpg 2x"
+            type="image/webp" />
+          <source media="(min-width: 1200px)" srcset="/img/made/made-desk.jpg 1x, /img/made/made-desk@2x.jpg 2x"
+            type="image/jpg" />
+
+          <source media="(min-width: 768px)" srcset="/img/made/made-tab.jpg 1x, /img/made/made-tab@2x.jpg 2x"
+            type="image/webp" />
+          <source media="(min-width: 768px)" srcset="/img/made/made-tab.jpg 1x, /img/made/made-tab@2x.jpg 2x"
+            type="image/jpg" />
+
+          <source media="(min-width: 300px)" srcset="/img/made/made-mob.jpg 1x, /img/made/made-mob@2x.jpg 2x"
+            type="image/webp" />
+          <source media="(min-width: 300px)" srcset="/img/made/made-mob.jpg 1x, /img/made/made-mob@2x.jpg 2x"
+            type="image/jpg" />
+          <img src="/img/made/made-mob.jpg" alt="Video how to make chocolate" loading="lazy" />
         </picture>
         <button class="how-made-btn js-open-menu" type="button" aria-expanded="false" aria-controls="mobile-menu">
           <svg class="how-made-icon small " width="14" height="15">
