--- a/src/partials/how-made.html
+++ b/src/partials/how-made.html
@@ -10,59 +10,59 @@
     <div class="how-made-wrap">
       <div class="how-made-img-wrap js-menu-container" id="mobile-menu">
         <picture class="how-made-img">
-          <source media="(min-width: 1200px)" srcset="/img/made/made-desk.jpg 1x, /img/made/made-desk@2x.jpg 2x"
+          <source media="(min-width: 1200px)" srcset="../img/made/made-desk.jpg 1x, ../img/made/made-desk@2x.jpg 2x"
             type="image/webp" />
-          <source media="(min-width: 1200px)" srcset="/img/made/made-desk.jpg 1x, /img/made/made-desk@2x.jpg 2x"
+          <source media="(min-width: 1200px)" srcset="../img/made/made-desk.jpg 1x, ../img/made/made-desk@2x.jpg 2x"
             type="image/jpg" />
 
-          <source media="(min-width: 768px)" srcset="/img/made/made-tab.jpg 1x, /img/made/made-tab@2x.jpg 2x"
+          <source media="(min-width: 768px)" srcset="../img/made/made-tab.jpg 1x, ../img/made/made-tab@2x.jpg 2x"
             type="image/webp" />
-          <source media="(min-width: 768px)" srcset="/img/made/made-tab.jpg 1x, /img/made/made-tab@2x.jpg 2x"
+          <source media="(min-width: 768px)" srcset="../img/made/made-tab.jpg 1x, ../img/made/made-tab@2x.jpg 2x"
             type="image/jpg" />
 
-          <source media="(min-width: 300px)" srcset="/img/made/made-mob.jpg 1x, /img/made/made-mob@2x.jpg 2x"
+          <source media="(min-width: 300px)" srcset="../img/made/made-mob.jpg 1x, ../img/made/made-mob@2x.jpg 2x"
             type="image/webp" />
-          <source media="(min-width: 300px)" srcset="/img/made/made-mob.jpg 1x, /img/made/made-mob@2x.jpg 2x"
+          <source media="(min-width: 300px)" srcset="../img/made/made-mob.jpg 1x, ../img/made/made-mob@2x.jpg 2x"
             type="image/jpg" />
-          <img src="/img/made/made-mob.jpg" alt="Video how to make chocolate" loading="lazy" />
+          <img src="../img/made/made-mob.jpg" alt="Video how to make chocolate" loading="lazy" />
         </picture>
         <button class="how-made-btn js-open-menu" type="button" aria-expanded="false" aria-controls="mobile-menu">
           <svg class="how-made-icon small " width="14" height="15">
-            <use href="/img/icons/icons.svg#play-btn"></use>
+            <use href="../img/icons/icons.svg#play-btn"></use>
           </svg>
           <svg class="how-made-icon big" width="20" height="21">
-            <use href="/img/icons/icons.svg#play-btn"></use>
+            <use href="../img/icons/icons.svg#play-btn"></use>
           </svg>
         </button>
-        <!-- <div class="how-made-video">
+        <div class="how-made-video">
           <iframe autoplay="1" width="560" height="315" src="https://www.youtube.com/embed/o767PuYbEXg"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen>
-          </iframe> -->
+          </iframe>
+        </div>
+      </div>
+      <div class="how-made-descr-wrap">
+        <p class="how-made-subtitle">Try our chocolates today and discover the perfect balance of flavor</p>
+        <ul class="how-made-list">
+          <li class="how-made-item">Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa
+            powder.
+          </li>
+          <li class="how-made-item">At the same time, prepare a water bath. Melt the butter on it.</li>
+          <li class="how-made-item">"Mix" the milk mixture and already liquid butter. Mix thoroughly with a
+            silicone
+            spatula
+            so that the mass
+            becomes
+            uniform and silky.</li>
+          <li class="how-made-item">Heat the mixture over low heat, letting it barely boil.</li>
+          <li class="how-made-item">Pour the chocolate into special containers (can be replaced with ice molds).
+            Allow
+            to
+            cool and harden.</li>
+        </ul>
       </div>
     </div>
-    <div class="how-made-descr-wrap">
-      <p class="how-made-subtitle">Try our chocolates today and discover the perfect balance of flavor</p>
-      <ul class="how-made-list">
-        <li class="how-made-item">Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa
-          powder.
-        </li>
-        <li class="how-made-item">At the same time, prepare a water bath. Melt the butter on it.</li>
-        <li class="how-made-item">"Mix" the milk mixture and already liquid butter. Mix thoroughly with a
-          silicone
-          spatula
-          so that the mass
-          becomes
-          uniform and silky.</li>
-        <li class="how-made-item">Heat the mixture over low heat, letting it barely boil.</li>
-        <li class="how-made-item">Pour the chocolate into special containers (can be replaced with ice molds).
-          Allow
-          to
-          cool and harden.</li>
-      </ul>
-    </div>
-  </div>
   </div>
 
 
