--- a/src/partials/how-made.html
+++ b/src/partials/how-made.html
@@ -10,28 +10,28 @@
     <div class="how-made-wrap">
       <div class="how-made-img-wrap js-menu-container" id="mobile-menu">
         <picture class="how-made-img">
-          <source media="(min-width: 1200px)" srcset="../img/made/made-desk.jpg 1x, ../img/made/made-desk@2x.jpg 2x"
+          <source media="(min-width: 1200px)" srcset="/img/made/made-desk.jpg 1x, /img/made/made-desk@2x.jpg 2x"
             type="image/webp" />
-          <source media="(min-width: 1200px)" srcset="../img/made/made-desk.jpg 1x, ../img/made/made-desk@2x.jpg 2x"
+          <source media="(min-width: 1200px)" srcset="/img/made/made-desk.jpg 1x, /img/made/made-desk@2x.jpg 2x"
             type="image/jpg" />
 
-          <source media="(min-width: 768px)" srcset="../img/made/made-tab.jpg 1x, ../img/made/made-tab@2x.jpg 2x"
+          <source media="(min-width: 768px)" srcset="/img/made/made-tab.jpg 1x, /img/made/made-tab@2x.jpg 2x"
             type="image/webp" />
-          <source media="(min-width: 768px)" srcset="../img/made/made-tab.jpg 1x, ../img/made/made-tab@2x.jpg 2x"
+          <source media="(min-width: 768px)" srcset="/img/made/made-tab.jpg 1x, /img/made/made-tab@2x.jpg 2x"
             type="image/jpg" />
 
-          <source media="(min-width: 300px)" srcset="../img/made/made-mob.jpg 1x, ../img/made/made-mob@2x.jpg 2x"
+          <source media="(min-width: 300px)" srcset="/img/made/made-mob.jpg 1x, /img/made/made-mob@2x.jpg 2x"
             type="image/webp" />
-          <source media="(min-width: 300px)" srcset="../img/made/made-mob.jpg 1x, ../img/made/made-mob@2x.jpg 2x"
+          <source media="(min-width: 300px)" srcset="/img/made/made-mob.jpg 1x, /img/made/made-mob@2x.jpg 2x"
             type="image/jpg" />
-          <img src="../img/made/made-mob.jpg" alt="Video how to make chocolate" loading="lazy" />
+          <img src="/img/made/made-mob.jpg" alt="Video how to make chocolate" loading="lazy" />
         </picture>
         <button class="how-made-btn js-open-menu" type="button" aria-expanded="false" aria-controls="mobile-menu">
           <svg class="how-made-icon small " width="14" height="15">
-            <use href="../img/icons/icons.svg#play-btn"></use>
+            <use href="/img/icons/icons.svg#play-btn"></use>
           </svg>
           <svg class="how-made-icon big" width="20" height="21">
-            <use href="../img/icons/icons.svg#play-btn"></use>
+            <use href="/img/icons/icons.svg#play-btn"></use>
           </svg>
         </button>
         <div class="how-made-video">
