--- a/src/partials/how-made.html
+++ b/src/partials/how-made.html
@@ -1,8 +1,7 @@
 <!-- Section how-it's-made -->
 
 <section class="how-made">
-
-  <div class="how-made-container container">
+  <div class="container">
     <h2 class="how-made-title" id="how-made">
       hOW IT’S
       <span class="how-made-title-accent">made?</span>
@@ -64,8 +63,4 @@
       </div>
     </div>
   </div>
-
-
-
-
 </section>
