--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,7 @@
 @import url('./header.css');
 @import url(./hero.css);
 @import url(./advantages.css);
-/* @import url(./components.css); */
+@import url(./unique-components.css);
 @import url(./how-made.css);
 /* @import url(./products.css); */
 /* @import url(./sellers.css); */
