--- a/src/css/unique-components.css
+++ b/src/css/unique-components.css
@@ -92,7 +92,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  transition: transform var(--transition-duration);
+  transition: transform 0.8s ease-in-out;
   transform-style: preserve-3d;
 }
 
