--- a/src/css/how-made.css
+++ b/src/css/how-made.css
@@ -1,14 +1,14 @@
 /* Section how-it's-made */
 
 .section-how-made {
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 
   @media (min-width: 768px) {
-    padding-bottom: 100px;
+    margin-bottom: 100px;
   }
 
   @media (min-width: 1200px) {
-    padding-bottom: 128px;
+    margin-bottom: 128px;
   }
 }
 
