--- a/src/css/our-products.css
+++ b/src/css/our-products.css
@@ -41,21 +41,7 @@
   color: var(--color-orange);
 }
 
-.swiper {
-  max-width: 100%;
-  max-height: 100%;
-  padding-bottom: 20px;
-}
-
-.swiper-wrapper {
-  margin-bottom: 20px;
-
-  @media (min-width: 768px) {
-    margin-bottom: 32px;
-  }
-}
-
-.swiper-slide.our-products-item {
+li.our-products-item {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -92,21 +78,4 @@
   line-height: 14px;
   letter-spacing: -0.02em;
   color: rgba(17, 17, 17, 0.7);
-}
-
-.swiper-pagination.swiper-pagination-bullets {
-  position: static;
-}
-
-.swiper-pagination-bullet.swiper-pagination-bullet-active {
-  background: var(--color-orange);
-  width: 28px;
-  height: 13px;
-  border-radius: 50px;
-}
-
-.swiper-pagination-bullet {
-  --swiper-pagination-bullet-width: 13px;
-  --swiper-pagination-bullet-height: 13px;
-  --swiper-pagination-bullet-horizontal-gap: 6px;
 }
