--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,8 +8,9 @@
 @import url(./unique-components.css);
 @import url(./how-made.css);
 @import url(./our-products.css);
-/* @import url(./sellers.css); */
-/* @import url(./reviews.css); */
+@import url(./top-sellers.css);
+@import url(./reviews.css);
+
 /* @import url(./subscribe.css); */
 /* @import url(./footer.css); */
 
@@ -82,8 +83,9 @@ svg * {
 }
 
 .button {
-  display: inline-flex;
+  display: flex;
   align-items: center;
+  justify-content: center;
   height: 41px;
   padding-inline: 28px;
   border-radius: 100px;
@@ -136,4 +138,37 @@ svg * {
     border: 1px solid var(--color-orange);
     color: var(--color-orange);
   } */
+}
+
+/* Swiper */
+
+.swiper {
+  max-width: 100%;
+  max-height: 100%;
+  padding-bottom: 20px;
+}
+
+.swiper-wrapper {
+  margin-bottom: 20px;
+
+  @media (min-width: 768px) {
+    margin-bottom: 32px;
+  }
+}
+
+.swiper-pagination.swiper-pagination-bullets {
+  position: static;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background: var(--color-orange);
+  width: 28px;
+  height: 13px;
+  border-radius: 50px;
+}
+
+.swiper-pagination-bullet {
+  --swiper-pagination-bullet-width: 13px;
+  --swiper-pagination-bullet-height: 13px;
+  --swiper-pagination-bullet-horizontal-gap: 6px;
 }
