--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,8 +10,7 @@
 @import url(./our-products.css);
 @import url(./top-sellers.css);
 @import url(./reviews.css);
-
-/* @import url(./subscribe.css); */
+@import url(./subscribe.css);
 /* @import url(./footer.css); */
 
 :root {
