--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -39,19 +39,19 @@
 
     <ul class="footer-menu">
       <li class="footer-menu-item">
-        <a href="#home" class="footer-menu-link">Home</a>
+        <a href="#header" class="footer-menu-link">Home</a>
       </li>
       <li class="footer-menu-item">
         <a href="#how-made" class="footer-menu-link">How it’s made?</a>
       </li>
       <li class="footer-menu-item">
-        <a href="#products" class="footer-menu-link">Our products</a>
+        <a href="#our-products" class="footer-menu-link">Our products</a>
       </li>
       <li class="footer-menu-item">
-        <a href="#sellers" class="footer-menu-link">Top sellers</a>
+        <a href="#top-sellers" class="footer-menu-link">Top sellers</a>
       </li>
       <li class="footer-menu-item">
-        <a href="#chocolate" class="footer-menu-link">Chocolate is loved</a>
+        <a href="#reviews" class="footer-menu-link">Chocolate is loved</a>
       </li>
     </ul>
   </div>
