--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section id="products" class="section-rewiews">
+<section id="reviews" class="section-rewiews">
   <div class="container">
     <h2 class="reviews-title">
       <span class="reviews-title-accent">chocolate</span>
