--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header id="home" class="header-section">
+<header id="header" class="header-section">
   <div class="container header-container">
     <a class="header-logo-link" href="./index.html">
       <div class="header-logo-text"><span class="header-logo-italic">simply</span> chocolate</div>
@@ -9,19 +9,19 @@
     <nav class="header-nav">
       <ul class="header-nav-list">
         <li class="header-nav-item">
-          <a class="header-nav-link" href="#home">Home</a>
+          <a class="header-nav-link" href="#header">Home</a>
         </li>
         <li class="header-nav-item">
           <a class="header-nav-link" href="#how-made">How it’s made?</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-nav-link" href="#products">Our products</a>
+          <a class="header-nav-link" href="#our-products">Our products</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-nav-link" href="#sellers">Top sellers</a>
+          <a class="header-nav-link" href="#top-sellers">Top sellers</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-nav-link" href="#chocolate">Chocolate is loved</a>
+          <a class="header-nav-link" href="#reviews">Chocolate is loved</a>
         </li>
       </ul>
     </nav>
