--- a/src/partials/our-products.html
+++ b/src/partials/our-products.html
@@ -1,4 +1,4 @@
-<section id="products" class="section-our-products">
+<section id="our-products" class="section-our-products">
   <div class="container our-products-container">
     <h2 class="our-products-title">
       Our
