--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -1,4 +1,4 @@
-<section id="sellers" class="section-top-sellers">
+<section id="top-sellers" class="section-top-sellers">
   <div class="container">
     <h2 class="top-sellers-title">
       <span class="top-sellers-title-accent">Top</span> Sellers
