--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,6 +12,7 @@
 @import url(./reviews.css);
 @import url(./subscribe.css);
 @import url(./footer.css);
+@import url(./mobile-menu.css);
 
 :root {
   --color-black: #111111;
