--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -44,7 +44,7 @@
       </li>
     </ul>
 
-    <button class="mobile-menu-open js-open-menu" type="button">
+    <button class="mobile-menu-open js-modal-open" data-modal-open="mobile-menu" type="button">
       <svg class="mobile-menu-icon">
         <use href="/img/icons.svg#mob-menu-open"></use>
       </svg>
