--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,7 +8,7 @@
       </p>
     </div>
     <div class="hero-wrap-button">
-      <button type="button" class="js-open-modal button" data-modal="1">
+      <button type="button" class="button js-modal-open" data-modal-open="modal-buy-now">
         Buy now
       </button>
       <a class="button button-transparent how-made-link" href="#how-made">
