--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,8 +1,8 @@
 <!-- mobile menu-->
 
-<div class="mobile-menu-backdrop js-menu-container">
+<div class="mobile-menu-backdrop js-modal-backdrop" id="mobile-menu">
   <div class="mobile-menu">
-    <button type="button" class="button-mobile-menu-close js-close-menu">
+    <button type="button" class="button-mobile-menu-close js-modal-close" data-modal-close>
       <svg class="mobile-menu-close-icon">
         <use href="/img/icons.svg#btn-close"></use>
       </svg>
