--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -39,7 +39,7 @@
         called Cacao. Cacao has been around for thousands of years and was first
         discovered by the Native American tribe called the Mayans.
       </p>
-      <button class="top-sellers-item button" type="button">
+      <button class="top-sellers-item button js-modal-open" data-modal-open="modal-buy-now" type="button">
         Buy now
       </button>
     </ul>
