--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,6 +13,7 @@
 @import url(./subscribe.css);
 @import url(./footer.css);
 @import url(./mobile-menu.css);
+@import url(./modal-buy-now.css);
 
 :root {
   --color-black: #111111;
@@ -138,6 +139,61 @@ svg * {
     border: 1px solid var(--color-orange);
     color: var(--color-orange);
   } */
+}
+
+.input,
+.textarea {
+  width: 100%;
+  height: 45px;
+  padding: 13px 18px;
+  outline: none;
+  border: 1.5px solid rgba(17, 17, 17, 0.05);
+  border-radius: 8px;
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
+
+  font-size: 13px;
+  letter-spacing: -0.02em;
+
+  @media (min-width: 768px) {
+    height: 66px;
+    padding: 16px 20px;
+
+    font-size: 18px;
+  }
+
+  &:focus {
+    border-color: var(--color-orange);
+  }
+
+  &::placeholder {
+    font-size: 13px;
+    color: rgba(64, 64, 64, 0.3);
+
+    @media (min-width: 768px) {
+      font-size: 18px;
+    }
+  }
+}
+
+.textarea {
+  height: 91px;
+  resize: none;
+
+  @media (min-width: 768px) {
+    height: 137px;
+  }
+
+  &:focus {
+    border-color: var(--color-orange);
+  }
+
+  &::placeholder {
+    color: rgba(64, 64, 64, 0.3);
+
+    @media (min-width: 768px) {
+      font-size: 18px;
+    }
+  }
 }
 
 /* Swiper */
