--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -96,6 +96,7 @@
       <div class="swiper-pagination"></div>
 
     </div>
-    <button class="button reviews-button" type="button">Leave a review</button>
+    <button class="button reviews-button js-modal-open" data-modal-open="modal-review" type="button">Leave a
+      review</button>
   </div>
 </section>
