--- a/src/css/modal-review.css
+++ b/src/css/modal-review.css
@@ -1,4 +1,4 @@
-.modal-buy-now-backdrop {
+.modal-review-backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -19,18 +19,18 @@
   transition-timing-function: var(--transition-timing-function);
 }
 
-.modal-buy-now-backdrop.is-open {
+.modal-review-backdrop.is-open {
   opacity: 1;
   visibility: visible;
   transform: scale(1);
   pointer-events: auto;
 }
 
-.modal-buy-now {
+.modal-review {
   position: relative;
   padding: 32px 24px;
   width: min(90%, 311px);
-  height: min(95%, 994px);
+  height: min(95%, 471px);
   overflow-y: auto;
 
   border-radius: 15px;
@@ -39,14 +39,13 @@
   transition: var(--duration-and-timing-function);
 
   @media (min-width: 768px) {
-    padding: 48px;
-    width: min(90%, 609px);
-    height: min(95%, 1058px);
+    padding: 40px;
+    width: min(90%, 517px);
+    height: min(95%, 628px);
   }
 }
 
-.modal-buy-now-title {
-  text-align: center;
+.modal-review-title {
   font-weight: 600;
   font-size: 20px;
   line-height: 1.2;
@@ -55,81 +54,23 @@
   margin-bottom: 32px;
 
   @media (min-width: 768px) {
+    margin-bottom: 40px;
     font-size: 24px;
     line-height: 1.17;
   }
 }
 
-.modal-buy-now-title-accent {
+.modal-review-title-accent {
   color: var(--color-orange);
 }
 
-.modal-buy-now-list {
+.modal-review-form {
   display: flex;
   flex-direction: column;
-  row-gap: 8px;
-  margin-bottom: 32px;
-
-  @media (min-width: 768px) {
-    flex-direction: row;
-    column-gap: 16px;
-    margin-bottom: 40px;
-  }
+  row-gap: 14px;
 }
 
-.modal-buy-now-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 8px 16px;
-  height: 85px;
-  background: var(--color-white);
-  border: 1px solid rgba(17, 17, 17, 0.1);
-  border-radius: 15px;
-
-  @media (min-width: 768px) {
-    flex-direction: column;
-    height: 196px;
-    padding: 24px 20px 18px;
-  }
-}
-
-.modal-buy-now-item-img {
-}
-
-.modal-buy-now-item-btn {
-  width: 73px;
-  height: 29px;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.2;
-  background: var(--color-background);
-  color: var(--color-dark);
-  border: 1px solid rgba(17, 17, 17, 0.1);
-  border-radius: 100px;
-
-  &:hover,
-  &focus {
-    border-color: var(--color-orange);
-  }
-
-  @media (min-width: 768px) {
-    width: 96px;
-    height: 33px;
-  }
-}
-
-.modal-buy-now-form {
-  display: flex;
-  flex-direction: column;
-  row-gap: 18px;
-}
-
-.modal-buy-now-form-label {
-  display: flex;
-  flex-direction: column;
-  row-gap: 8px;
-
+.modal-review-input {
   font-weight: 500;
   font-size: 12px;
   line-height: 1.17;
@@ -141,25 +82,11 @@
   }
 }
 
-.modal-buy-now-wrap-personal {
-  display: flex;
-  flex-direction: column;
-  row-gap: 14px;
-
-  @media (min-width: 768px) {
-    flex-direction: row;
-    column-gap: 21px;
-  }
-}
-
-.modal-buy-now-input {
-}
-
-.modal-buy-now-wrap-tel {
+.modal-review-wrap-tel {
   position: relative;
 }
 
-.modal-buy-now-input.modal-buy-now-input-tel {
+.modal-review-input.modal-review-input-tel {
   padding-left: 106px;
 
   @media (min-width: 768px) {
@@ -167,7 +94,7 @@
   }
 }
 
-.modal-buy-now-wrap-code {
+.modal-review-wrap-code {
   position: absolute;
   top: 50%;
   left: 18px;
@@ -189,7 +116,7 @@
   }
 }
 
-.modal-buy-now-code-icon {
+.modal-review-code-icon {
   width: 24px;
   height: 24px;
 
@@ -199,7 +126,7 @@
   }
 }
 
-.modal-buy-now-code-text {
+.modal-review-code-text {
   font-weight: 500;
   font-size: 13px;
   letter-spacing: -0.02em;
@@ -209,31 +136,19 @@
   }
 }
 
-.modal-buy-now-wrap-card {
-  position: relative;
-}
-
-.modal-buy-now-card-icon {
-  position: absolute;
-  top: 50%;
-  right: 14px;
-  transform: translateY(-50%);
-
-  width: 31px;
-  height: 21px;
+.modal-review-textarea {
+  margin-bottom: 4px;
 
   @media (min-width: 768px) {
-    right: 24px;
-    width: 44px;
-    height: 30px;
+    margin-bottom: none;
   }
 }
 
-.modal-buy-now-form-btn {
-  width: 109px;
+.modal-review-form-btn {
+  width: 93px;
 
   @media (min-width: 768px) {
-    width: 133px;
+    width: 117px;
   }
 }
 
