--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,7 @@
 @import url(./footer.css);
 @import url(./mobile-menu.css);
 @import url(./modal-buy-now.css);
+@import url(./modal-review.css);
 
 :root {
   --color-black: #111111;
