--- a/src/partials/modal-buy-now.html
+++ b/src/partials/modal-buy-now.html
@@ -76,12 +76,11 @@
       </label>
       <button class="modal-buy-now-form-btn button" type="submit">Submit</button>
     </form>
-    <!--   Svg иконка для закрытия окна  -->
-    <div class="modal__cross-buynow js-modal-close" data-modal-close>
-      <svg class="buynow-cross-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path
-          d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z" />
+
+    <button type="button" class="button-modal-close js-modal-close" data-modal-close>
+      <svg class="modal-close-icon">
+        <use href="/img/icons.svg#btn-close"></use>
       </svg>
-    </div>
+    </button>
   </div>
 </div>
