--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -1,9 +1,9 @@
-<div class="modal-review-backdrop js-modal-backdrop" id="modal-review">
+<div class="modal-backdrop js-modal-backdrop" id="modal-review">
   <div class="modal-review">
     <h2 class="modal-review-title">leave a review
       about <span class="modal-review-title-accent">our chocolate</span></h2>
 
-    <form class="modal-review-form" id="buyForm" name="modal-buy-now-form" autocomplete="off" novalidate>
+    <form class="modal-review-form" id="reviewForm" name="modal-buy-now-form" autocomplete="off" novalidate>
       <label class="modal-review-form-label visually-hidden" for="name">Name</label>
       <input class="modal-review-input input" id="name" type="text" name="name" placeholder="Name" autofocus required
         pattern="[A-Za-z]{3,10}" autocomplete="off">
