--- a/src/css/components/sections/hero.css
+++ b/src/css/components/sections/hero.css
@@ -14,12 +14,9 @@
   padding: 395px 20px 20px;
   border-radius: 30px;
 
-  background-image: linear-gradient(
-      180deg,
-      rgba(17, 17, 17, 0) 0%,
-      rgba(17, 17, 17, 0.4) 100%
-    ),
-    url(/img/hero/bg-hero-mob.jpg);
+  background-image:
+    linear-gradient(180deg, rgba(17, 17, 17, 0) 0%, rgba(17, 17, 17, 0.4) 100%),
+    url(/img/hero/bg-hero-mob.webp);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -27,55 +24,60 @@
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    background-image: linear-gradient(
+    background-image:
+      linear-gradient(
         180deg,
         rgba(17, 17, 17, 0) 0%,
         rgba(17, 17, 17, 0.4) 100%
       ),
-      url(/img/hero/bg-hero-mob@2x.jpg);
+      url(/img/hero/bg-hero-mob@2x.webp);
   }
 
   @media (min-width: 768px) {
     padding: 671px 40px 40px;
 
-    background-image: linear-gradient(
+    background-image:
+      linear-gradient(
         180deg,
         rgba(17, 17, 17, 0) 0%,
         rgba(17, 17, 17, 0.4) 100%
       ),
-      url(/img/hero/bg-hero-tab.jpg);
+      url(/img/hero/bg-hero-tab.webp);
 
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: linear-gradient(
+      background-image:
+        linear-gradient(
           180deg,
           rgba(17, 17, 17, 0) 0%,
           rgba(17, 17, 17, 0.4) 100%
         ),
-        url(/img/hero/bg-hero-tab@2x.jpg);
+        url(/img/hero/bg-hero-tab@2x.webp);
     }
   }
 
   @media (min-width: 1200px) {
     padding: 381px 40px 40px;
 
-    background-image: linear-gradient(
+    background-image:
+      linear-gradient(
         180deg,
         rgba(17, 17, 17, 0) 0%,
         rgba(17, 17, 17, 0.4) 100%
       ),
-      url(/img/hero/bg-hero-desk.jpg);
+      url(/img/hero/bg-hero-desk.webp);
 
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: linear-gradient(
+      background-image:
+        linear-gradient(
           180deg,
           rgba(17, 17, 17, 0) 0%,
           rgba(17, 17, 17, 0.4) 100%
         ),
-        url(/img/hero/bg-hero-desk@2x.jpg);
+        url(/img/hero/bg-hero-desk@2x.webp);
     }
   }
 }
