--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,231 +1,32 @@
-/* @import url('../../node_modules/modern-normalize/modern-normalize.css'); */
+@import url('./modern-normalize.css');
 @import url('./reset.css');
 @import url('./fonts.css');
+@import url('./variables.css');
+@import url('./global.css');
 
-@import url('./header.css');
-@import url(./hero.css);
-@import url(./advantages.css);
-@import url(./unique-components.css);
-@import url(./how-made.css);
-@import url(./our-products.css);
-@import url(./top-sellers.css);
-@import url(./reviews.css);
-@import url(./subscribe.css);
-@import url(./footer.css);
-@import url(./mobile-menu.css);
-@import url(./modal-buy-now.css);
-@import url(./modal-review.css);
+/* sections */
+@import url('./components/sections/header.css');
+@import url(./components/sections/hero.css);
+@import url(./components/sections/advantages.css);
+@import url(./components/sections/unique-components.css);
+@import url(./components/sections/how-made.css);
+@import url(./components/sections/our-products.css);
+@import url(./components/sections/top-sellers.css);
+@import url(./components/sections/reviews.css);
+@import url(./components/sections/subscribe.css);
+@import url(./components/sections/footer.css);
 
-:root {
-  --color-black: #111111;
-  --color-dark: #1e1823;
-  --color-orange: #fd9222;
-  --color-button-hover: #fcf1e0;
-  --color-white: #ffffff;
-  --color-background: #fafafa;
+/* general components */
+@import url('./components/general-components/buttons.css');
+@import url('./components/general-components/input.css');
+@import url('./components/general-components/swiper.css');
 
-  --font-family-base: 'Montserrat', sans-serif;
+/* utils */
+@import url('./utils.css');
 
-  --transition-duration: 0.4s;
-  --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: var(--font-family-base);
-  font-style: normal;
-  letter-spacing: -0.02em;
-  background-color: var(--color-background);
-  color: var(--color-black);
-}
-
-.container {
-  max-width: 375px;
-
-  padding-inline: 20px;
-  margin-inline: auto;
-
-  outline: 1px solid red;
-  outline-offset: -1px;
-
-  @media only screen and (min-width: 768px) {
-    max-width: 768px;
-    padding-inline: 32px;
-  }
-
-  @media only screen and (min-width: 1200px) {
-    max-width: 1200px;
-  }
-}
-
-a,
-button,
-input,
-textarea,
-svg * {
-  transition-duration: var(--transition-duration);
-  transition-timing-function: var(--transition-timing-function);
-}
-
-.button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 41px;
-  padding-inline: 28px;
-  border-radius: 100px;
-  background-color: var(--color-orange);
-
-  font-weight: 600;
-  font-size: 14px;
-  color: var(--color-white);
-
-  @media (min-width: 768px) {
-    height: 45px;
-    padding-inline: 40px;
-  }
-
-  &:hover,
-  &:focus {
-    background-color: var(--color-button-hover);
-    color: var(--color-orange);
-  }
-}
-
-.button-transparent {
-  background-color: transparent;
-  border: 1px solid var(--color-white);
-  color: var(--color-white);
-
-  &:hover,
-  &:focus {
-    background-color: transparent;
-    border: 1px solid var(--color-orange);
-    color: var(--color-orange);
-  }
-}
-
-.button-grey {
-  display: inline-flex;
-  align-items: center;
-  height: 33px;
-  padding-inline: 20px;
-  border: 1px solid rgba(17, 17, 17, 0.1);
-  border-radius: 100px;
-  background-color: var(--color-background);
-  cursor: auto;
-
-  font-weight: 600;
-  font-size: 14px;
-
-  /* &:hover,
-  &:focus {
-    border: 1px solid var(--color-orange);
-    color: var(--color-orange);
-  } */
-}
-
-.input,
-.textarea {
-  width: 100%;
-  height: 45px;
-  padding: 13px 18px;
-  outline: none;
-  border: 1.5px solid rgba(17, 17, 17, 0.05);
-  border-radius: 8px;
-  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
-
-  font-size: 13px;
-  letter-spacing: -0.02em;
-
-  @media (min-width: 768px) {
-    height: 66px;
-    padding: 16px 20px;
-
-    font-size: 18px;
-  }
-
-  &:focus {
-    border-color: var(--color-orange);
-  }
-
-  &::placeholder {
-    font-size: 13px;
-    color: rgba(64, 64, 64, 0.3);
-
-    @media (min-width: 768px) {
-      font-size: 18px;
-    }
-  }
-}
-
-.textarea {
-  height: 91px;
-  resize: none;
-
-  @media (min-width: 768px) {
-    height: 137px;
-  }
-
-  &:focus {
-    border-color: var(--color-orange);
-  }
-
-  &::placeholder {
-    color: rgba(64, 64, 64, 0.3);
-
-    @media (min-width: 768px) {
-      font-size: 18px;
-    }
-  }
-}
-
-/* Swiper */
-
-.swiper {
-  max-width: 100%;
-  max-height: 100%;
-  padding-bottom: 20px;
-}
-
-.swiper-wrapper {
-  margin-bottom: 20px;
-
-  @media (min-width: 768px) {
-    margin-bottom: 32px;
-  }
-}
-
-.swiper-pagination.swiper-pagination-bullets {
-  position: static;
-}
-
-.swiper-pagination-bullet.swiper-pagination-bullet-active {
-  background: var(--color-orange);
-  width: 28px;
-  height: 13px;
-  border-radius: 50px;
-}
-
-.swiper-pagination-bullet {
-  --swiper-pagination-bullet-width: 13px;
-  --swiper-pagination-bullet-height: 13px;
-  --swiper-pagination-bullet-horizontal-gap: 6px;
-}
+/* modals */
+@import url(./components/modals/mobile-menu.css);
+@import url(./components/modals/modal.css);
+@import url(./components/modals//modal-buy-now.css);
+@import url(./components/modals//modal-review.css);
+@import url(./components/modals//modal-subscribe.css);
