--- a/src/partials/modal-buy-now.html
+++ b/src/partials/modal-buy-now.html
@@ -1,4 +1,4 @@
-<div class="modal-buy-now-backdrop js-modal-backdrop" id="modal-buy-now">
+<div class="modal-backdrop js-modal-backdrop" id="modal-buy-now">
   <div class="modal-buy-now">
     <h2 class="modal-buy-now-title"><span class="modal-buy-now-title-accent">BUY</span> NOW</h2>
     <ul class="modal-buy-now-list">
