--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -7,7 +7,7 @@
       finest ingredients and handcrafted with the utmost care, each piece is a
       work of art that is sure to please.
     </p>
-    <button type="button" class="button subscribe-button js-open-modal" data-modal="3">
+    <button class="button subscribe-button js-open-modal" data-modal-open="modal-subscribe" type="button">
       Subscribe
     </button>
   </div>
